--- a/package.json
+++ b/package.json
@@ -10,21 +10,27 @@
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
+    "@supabase/auth-ui-react": "^0.4.4",
+    "@supabase/auth-ui-shared": "^0.1.6",
+    "@supabase/supabase-js": "^2.33.1",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "formik": "^2.4.3",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "daisyui": "^3.6.5",
+    "dotenv": "^16.3.1",
     "install": "^0.13.0",
     "npm": "^10.0.0",
     "prisma": "^5.2.0"
