--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cookie": "^0.5.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.3",
@@ -26,11 +27,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "serialize": "^0.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/cookie": "^0.5.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "daisyui": "^3.6.5",
     "dotenv": "^16.3.1",
     "install": "^0.13.0",
