--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
+    "request-ip": "^3.3.0",
     "serialize": "^0.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@types/cookie": "^0.5.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/request-ip": "^0.0.40",
     "daisyui": "^3.6.5",
     "dotenv": "^16.3.1",
     "install": "^0.13.0",
