--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.5.6",
     "@prisma/client": "^5.2.0",
     "@supabase/auth-ui-react": "^0.4.4",
     "@supabase/auth-ui-shared": "^0.1.6",
@@ -23,8 +24,8 @@
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "13.4.19",
-    "postcss": "8.4.29",
+    "next": "^13.5.6",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
