--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "boring-avatars": "^1.10.1",
     "cookie": "^0.5.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^14.0.2",
     "formik": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "^13.5.6",
+    "next": "^14.0.2",
     "postcss": "^8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toastify": "^9.1.3",
     "request-ip": "^3.3.0",
     "serialize": "^0.1.3",
