--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^13.5.6",
-    "@prisma/client": "^5.2.0",
+    "@prisma/client": "^5.7.0",
     "@supabase/auth-ui-react": "^0.4.4",
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.33.1",
@@ -18,13 +18,15 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "bcrypt": "^5.1.1",
+    "binary-uuid": "^2.0.3",
     "boring-avatars": "^1.10.1",
     "cookie": "^0.5.0",
     "eslint": "8.48.0",
-    "eslint-config-next": "^14.0.2",
+    "eslint-config-next": "^14.0.4",
     "formik": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "^14.0.2",
+    "next": "^14.0.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +38,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/request-ip": "^0.0.40",
@@ -43,6 +46,6 @@
     "dotenv": "^16.3.1",
     "install": "^0.13.0",
     "npm": "^10.0.0",
-    "prisma": "^5.2.0"
+    "prisma": "^5.7.0"
   }
 }
